syntax = "proto3";

package objectstorage;

service ObjectStorageService {
  rpc PutObjectS3(stream PutObjectS3Request) returns (OperationStatus);
  rpc GetObjectS3(GetObjectS3Request) returns (stream ObjectData);

  rpc PutObjectReference(PutObjectReferenceRequest) returns (OperationStatus);
  rpc GetObjectReference(GetObjectReferenceRequest) returns (stream ObjectData);
}

message PutObjectS3Request {
//  string bucket = 1;
  string objectKey = 1;
  bytes chunk = 2;
}

message GetObjectS3Request {
//  string bucket = 1;
  string objectKey = 1;
}

message PutObjectReferenceRequest {
  string objectKey = 1;
  string path = 2;
}

message GetObjectReferenceRequest {
  string objectKey = 2;
}

message ObjectData {
  bytes chunk = 1;
}

message OperationStatus {
  enum Status {
    SUCCESS = 0;
    FAILURE = 1;
  }
  Status status = 1;
  string message = 2;
}
